// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-dictionary-item should delete a dictionary item 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`delete-dictionary-item should handle non-existent dictionary item 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
